@startuml
interface IModel {
    + id: int
}

interface IPerson {
}

interface IModelFinder {
    + find(id: number): IModel
}

class PersonFinder {
    - db
    - identityMap
    - personMapper
    + find(id: number): IPerson
}

class IdentityMapper {
    + find (type, id): IModel
    + add (model): void
}

class PersonMapper {
    + mapEntity(person, props): Person
}

IModel <|-- IPerson
IModelFinder <|-- PersonFinder

IModelFinder .left.> IModel

PersonFinder ..> IdentityMapper
PersonFinder ..> PersonMapper

@enduml
